working on corrections [skip actions]

--- a/cluster_generator/bin/resources/plot_defaults.yaml
+++ b/cluster_generator/bin/resources/plot_defaults.yaml
@@ -76,3 +76,8 @@ electron_number_density:
   scale: "log"
   revision: 1
   kwargs: { }
+radius:
+  label: "radius / $\\left[%(unit)s\\right]$"
+  scale: "log"
+  revision: 1
+  kwargs: { }
