--- a/.github/workflows/build-docs.yml
+++ b/.github/workflows/build-docs.yml
@@ -29,7 +29,7 @@ jobs:
         run: |
           curl -OL https://gitlab.com/api/v4/projects/4207231/packages/generic/graphviz-releases/9.0.0/graphviz-9.0.0.tar.gz
           tar -zxf graphviz-9.0.0.tar.gz
-          cd graphviz-9.0.0.tar.gz
+          cd graphviz-9.0.0
           ./configure
           make
           make install
