[Feature] Ammended models with necessary gravitational generalizations [skip actions]

--- a/cluster_generator/bin/config.yaml
+++ b/cluster_generator/bin/config.yaml
@@ -35,6 +35,7 @@ physics:
 #======================================================================================================================#
 gravity:
   # -- These settings are all regarding the gravity systems in cluster generator -- #
+  default_gravity: "Newtonian" # The user's default gravitational theory.
   general:
     # -- General gravity settings for types / classes of gravity -- #
     mond:
