--- a/cluster_generator/bin/config.yaml
+++ b/cluster_generator/bin/config.yaml
@@ -36,6 +36,7 @@ physics:
 gravity:
   # -- These settings are all regarding the gravity systems in cluster generator -- #
   default_gravity: "Newtonian" # The user's default gravitational theory.
+  default_virialization: "Eddington" # The default virialization method
   general:
     # -- General gravity settings for types / classes of gravity -- #
     mond:
