--- a/cluster_generator/bin/resources/plot_defaults.yaml
+++ b/cluster_generator/bin/resources/plot_defaults.yaml
@@ -82,7 +82,7 @@ radius:
   revision: 1
   kwargs: { }
 magnetic_field_strength:
-  label: "$\\left|\\vec{B}\\right|$ / $ $\\left[%(unit)s\\right]$"
+  label: "$\\left|\\vec{B}\\right|$ / $\\left[%(unit)s\\right]$"
   scale: "log"
   revision: 1
   kwargs: {}
