--- a/cluster_generator/bin/config.yaml
+++ b/cluster_generator/bin/config.yaml
@@ -18,7 +18,7 @@ logging:
   mylog:
     # Settings for the mainlog. This is the log which displays to stdout for most processes.
     format: '%(name)-3s : [%(levelname)-9s] %(asctime)s %(message)s' # Logger's string format for output
-    level: INFO      # Only logging passed to this level or higher are displayed.
+    level: DEBUG     # Only logging passed to this level or higher are displayed.
     stream: stderr   # Can be STDERR or STDOUT.
   devlog:
     # The developer log. This will increase the ammount of technical detail printed to stdout.
@@ -26,7 +26,11 @@ logging:
     format: '%(name)-3s : [%(levelname)-9s] %(asctime)s %(message)s' # Logger's string format for output
     level: DEBUG    # Only logging passed to this level or higher are displayed.
     stream: stderr   # Can be STDERR or STDOUT.
-
+  code:
+    format: '%(name)-3s : [%(levelname)-9s] %(asctime)s %(message)s' # Logger's string format for output
+    level: DEBUG
+    stream: stderr
+    enabled: true
 
 #======================================================================================================================#
 physics:
